--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -33,13 +33,10 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: xvfb-run ./gradlew build
 
     - name: Generate JaCoCo Badge
       uses: cicirello/jacoco-badge-generator@v2
